gbacktrace: g_get_prgname () isn't called for a NULL argument

https://bugzilla.gnome.org/show_bug.cgi?id=658871